apps/bento-pdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  labels:
    app.kubernetes.io/instance: bentopdf
    app.kubernetes.io/name: bentopdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bentopdf
      app.kubernetes.io/name: bentopdf
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bentopdf
        app.kubernetes.io/name: bentopdf
    spec:
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: bentopdf
          image: ghcr.io/alam00000/bentopdf:2.8.8
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 512m
              memory: 512Mi
            requests:
              cpu: 50m
          ports:
            - name: web
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - "ALL"
              # add:
              #   - CHOWN
              #   - SETUID
              #   - SETGID
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 30
            tcpSocket:
              port: 8080
            timeoutSeconds: 2
          startupProbe:
            failureThreshold: 20
            timeoutSeconds: 2
            tcpSocket:
              port: 8080
          volumeMounts:
            - name: tmp
              mountPath: /tmp                # ← removed the wrong subPath here
            - name: nginx-cache
              mountPath: /var/cache/nginx    # nginx needs to write here
            - name: nginx-run
              mountPath: /var/run           # nginx needs to write pid file here
            - name: nginx-tmp
              mountPath: /etc/nginx/tmp           # nginx needs to write pid file here
      volumes:
        - name: tmp
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
