apps/bento-pdf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bento-pdf-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Documents
    gethomepage.dev/name: Bento PDF
    gethomepage.dev/href: "https://pdf.home.alden.ai"
    gethomepage.dev/description: PDF Management Tools
    gethomepage.dev/icon: bentopdf.svg
    gethomepage.dev/app: bentopdf # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=bentopdf,app.kubernetes.io/name=bentopdf"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-https-gateway
    namespace: istio-system
  hostnames:
  - pdf.home.alden.ai
  rules:
  - backendRefs:
    - name: bentopdf
      port: 8080
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
